syntax = "proto3";

option java_outer_classname = "ClioteSkyRPC";
option java_package = "net.estinet.gFeatures.ClioteSky";

service ClioteSkyService {
    rpc Request(Token) returns (stream ClioteMessage);
    rpc Send(ClioteSend) returns (Empty);
    rpc Auth(AuthRequest) returns (Token);
    rpc CheckNameTaken(String) returns (Boolean); //check if name is taken
}

message String {
    string str = 1;
}
message Boolean {
    bool b = 1;
}
message Empty {}
message Token {
    string token = 1;
}
message ClioteMessage {
    bytes data = 1;
    string identifier = 2;
    string sender = 3;
}
message ClioteSend {
    bytes data = 1;
    string token = 2;
    string identifier = 3;
    string recipient = 4;
}
message AuthRequest {
    string user = 1;
    string password = 2;
    string category = 3;
}